sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: value =! is not a member of Int
while (x=!0) {
        ^